# -

./: LICENSE  README.md  游戏逆向工具.py
game-reai/: pyproject.toml
game-reai/game_reai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
game-reai/tests/: conftest.py  test_base_tool.py  test_ce_parser.py  test_config.py  test_generator.py  test_memory.py
